// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combat Engine Integration > Scenario 1: 3 Strikers vs 1 Heavy Enemy > should defeat enemy through simultaneous damage 1`] = `
[
  {
    "actorId": "player-1",
    "message": "Striker 1 used Strike",
    "skillName": "Strike",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-1",
    "message": "Heavy Enemy takes 15 damage",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "damage",
    "value": 15,
  },
  {
    "actorId": "player-2",
    "message": "Striker 2 used Strike",
    "skillName": "Strike",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-2",
    "message": "Heavy Enemy takes 15 damage",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "damage",
    "value": 15,
  },
  {
    "actorId": "player-3",
    "message": "Striker 3 used Strike",
    "skillName": "Strike",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-3",
    "message": "Heavy Enemy takes 15 damage",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "damage",
    "value": 15,
  },
  {
    "message": "Heavy Enemy was knocked out",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "knockout",
  },
  {
    "message": "Victory!",
    "tick": 3,
    "type": "victory",
  },
]
`;

exports[`Combat Engine Integration > Scenario 2: Poison vs Heal Race > should apply poison and deal tick damage over time 1`] = `
[
  {
    "actorId": "player-1",
    "message": "Poisoner used Poison",
    "skillName": "Poison",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-1",
    "message": "poisoned applied to Weak Enemy",
    "statusType": "poisoned",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "status-applied",
  },
  {
    "message": "Weak Enemy takes 5 poison damage",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "damage",
    "value": 5,
  },
  {
    "message": "Weak Enemy takes 5 poison damage",
    "targetId": "enemy-1",
    "tick": 4,
    "type": "damage",
    "value": 5,
  },
  {
    "message": "Weak Enemy takes 5 poison damage",
    "targetId": "enemy-1",
    "tick": 5,
    "type": "damage",
    "value": 5,
  },
  {
    "message": "Weak Enemy takes 5 poison damage",
    "targetId": "enemy-1",
    "tick": 6,
    "type": "damage",
    "value": 5,
  },
  {
    "message": "Weak Enemy takes 5 poison damage",
    "targetId": "enemy-1",
    "tick": 7,
    "type": "damage",
    "value": 5,
  },
  {
    "message": "Weak Enemy was knocked out",
    "targetId": "enemy-1",
    "tick": 7,
    "type": "knockout",
  },
  {
    "message": "Victory!",
    "tick": 7,
    "type": "victory",
  },
]
`;

exports[`Combat Engine Integration > Scenario 3: Taunt Tank Strategy > should apply taunt status and demonstrate status interaction 1`] = `
[
  {
    "actorId": "player-1",
    "message": "Tank used Taunt",
    "skillName": "Taunt",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-2",
    "message": "DPS used Strike",
    "skillName": "Strike",
    "tick": 3,
    "type": "action-resolved",
  },
  {
    "actorId": "player-2",
    "message": "Enemy takes 15 damage",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "damage",
    "value": 15,
  },
  {
    "actorId": "player-1",
    "message": "taunting applied to Tank",
    "statusType": "taunting",
    "targetId": "player-1",
    "tick": 3,
    "type": "status-applied",
  },
  {
    "message": "Enemy was knocked out",
    "targetId": "enemy-1",
    "tick": 3,
    "type": "knockout",
  },
  {
    "message": "Victory!",
    "tick": 3,
    "type": "victory",
  },
]
`;

exports[`Combat Engine Integration > Scenario 4: Interrupt Spam > should cancel enemy channeled attack with interrupt 1`] = `
[
  {
    "actorId": "player-1",
    "message": "Interrupter used Interrupt",
    "skillName": "Interrupt",
    "tick": 2,
    "type": "action-resolved",
  },
  {
    "actorId": "player-1",
    "message": "Heavy Striker takes 5 damage",
    "targetId": "enemy-1",
    "tick": 2,
    "type": "damage",
    "value": 5,
  },
  {
    "actorId": "player-1",
    "message": "Interrupter used Strike",
    "skillName": "Strike",
    "tick": 4,
    "type": "action-resolved",
  },
  {
    "actorId": "player-1",
    "message": "Heavy Striker takes 15 damage",
    "targetId": "enemy-1",
    "tick": 4,
    "type": "damage",
    "value": 15,
  },
  {
    "message": "Heavy Striker was knocked out",
    "targetId": "enemy-1",
    "tick": 4,
    "type": "knockout",
  },
  {
    "message": "Victory!",
    "tick": 4,
    "type": "victory",
  },
]
`;

exports[`Combat Engine Integration > Scenario 5: Execute Finisher > should deal execute damage when target below 25% HP threshold 1`] = `
[
  {
    "actorId": "player-1",
    "message": "Executioner used Execute",
    "skillName": "Execute",
    "tick": 4,
    "type": "action-resolved",
  },
  {
    "actorId": "player-1",
    "message": "Low HP Enemy takes 50 damage",
    "targetId": "enemy-1",
    "tick": 4,
    "type": "damage",
    "value": 50,
  },
  {
    "message": "Low HP Enemy was knocked out",
    "targetId": "enemy-1",
    "tick": 4,
    "type": "knockout",
  },
  {
    "message": "Victory!",
    "tick": 4,
    "type": "victory",
  },
]
`;
